crates/review-buddy/tests/snapshots/frames_v02__frame_first_run_4_scope_no_color_100x30.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: plain_dump(& mut app)
---
 review buddy  ·  first run                                                              Liminal HQ









           ╭ 2 · What to include ───────────────────────────────────────────────────────╮
           │ Pick what each account covers. Leave everything unticked to include        │
           │ everything you can see.                                                    │
           │                                                                            │
           │ › [x] github.com · my own repositories                                     │
           │   [ ] github.com · org liminal-hq                                          │
           │   [ ] github.com · org acme                                                │
           │                                                                            │
           │ [ Back ]  [ Continue ⏎ ]  [ Skip for now · esc ]                           │
           ╰────────────────────────────────────────────────────────────────────────────╯









 ⏎ continue  space pick  esc skip for now

-- modifiers --
0:1 B "review buddy"
0:13 D "  ·  first run"
0:88 D " Liminal HQ"
10:11 B "╭ 2 · What to include ───────────────────────────────────────────────────────╮"
11:11 B "│"
11:13 D "Pick what each account covers. Leave everything unticked to include"
11:88 B "│"
12:11 B "│"
12:13 D "everything you can see."
12:88 B "│"
13:11 B "│"
13:88 B "│"
14:11 B "│"
14:13 BR "›"
14:15 R "[x]"
14:19 BR "github.com"
14:29 DR " · my own repositories"
14:88 B "│"
15:11 B "│"
15:13 B ""
15:19 B "github.com"
15:29 D " · org liminal-hq"
15:88 B "│"
16:11 B "│"
16:13 B ""
16:19 B "github.com"
16:29 D " · org acme"
16:88 B "│"
17:11 B "│"
17:88 B "│"
18:11 B "│"
18:13 D "[ Back ]"
18:23 B "[ Continue ⏎ ]"
18:39 D "[ Skip for now · esc ]"
18:88 B "│"
19:11 B "╰────────────────────────────────────────────────────────────────────────────╯"
29:1 B "⏎"
29:2 D " continue"
29:13 B "space"
29:18 D " pick"
29:25 B "esc"
29:28 D " skip for now"
