crates/review-buddy/tests/snapshots/frames_v02__frame_first_run_5_look_afterglow_dark_160x40.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: text(& render(& mut app))
---
 review buddy  ·  first run                                                                                                                     Afterglow Light














                                         ╭ 3 · Pick a look ───────────────────────────────────────────────────────────╮
                                         │ ← → changes the screen live. You can change it later with T.               │
                                         │                                                                            │
                                         │   Liminal HQ       ██ ██ ██ ██                                             │
                                         │   Dusk             ██ ██ ██ ██                                             │
                                         │   Afterglow Dark   ██ ██ ██ ██                                             │
                                         │ › Afterglow Light  ██ ██ ██ ██                                             │
                                         │                                                                            │
                                         │ [ Back ]  [ Continue ⏎ ]  [ Skip for now · esc ]                           │
                                         ╰────────────────────────────────────────────────────────────────────────────╯














 ⏎ continue  ← → theme  tab buttons  ⌫ back  esc skip for now
