crates/review-buddy/tests/snapshots/frames_v02__frame_first_run_5_look_dusk_100x30.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: text(& render(& mut app))
---
 review buddy  ·  first run                                                          Afterglow Dark









           ╭ 3 · Pick a look ───────────────────────────────────────────────────────────╮
           │ ← → changes the screen live. You can change it later with T.               │
           │                                                                            │
           │   Liminal HQ       ██ ██ ██ ██                                             │
           │   Dusk             ██ ██ ██ ██                                             │
           │ › Afterglow Dark   ██ ██ ██ ██                                             │
           │   Afterglow Light  ██ ██ ██ ██                                             │
           │                                                                            │
           │ [ Back ]  [ Continue ⏎ ]  [ Skip for now · esc ]                           │
           ╰────────────────────────────────────────────────────────────────────────────╯









 ⏎ continue  space pick  esc skip for now
